k8s/base/react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: 438465166613.dkr.ecr.ca-central-1.amazonaws.com/luis-portfolio:react-portfolio
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
